src/tests/test_vm/snapshots/lx__tests__test_vm__scripts_error@assign_to_function_literal_error.lx.snap
---
source: src/tests/test_vm/mod.rs
expression: output
input_file: src/tests/test_vm/scripts_error/assign_to_function_literal_error.lx
---
ERROR! /Users/jmccollum/rust/lx
unable to assign to (fn () {
}) at src/tests/test_vm/scripts_error/assign_to_function_literal_error.lx:1:1

