src/tests/test_vm/snapshots/lx__tests__test_vm__scripts_error@catch_with_no_name_error.lx.snap
---
source: src/tests/test_vm/mod.rs
expression: output
input_file: src/tests/test_vm/scripts_error/catch_with_no_name_error.lx
---
ERROR! /Users/jmccollum/rust/lx
expected identifier, but found { at src/tests/test_vm/scripts_error/catch_with_no_name_error.lx:3:9

