src/tests/test_vm/snapshots/lx__tests__test_vm__scripts_error@misplaced_break_error.lx.snap
---
source: src/tests/test_vm/mod.rs
expression: output
input_file: src/tests/test_vm/scripts_error/misplaced_break_error.lx
---
ERROR! src/tests/test_vm/scripts_error/misplaced_break_error.lx:3:5: break not allowed outside of loop

