src/tests/test_vm/snapshots/lx__tests__test_vm__scripts_error@misplaced_return_error.lx.snap
---
source: src/tests/test_vm/mod.rs
expression: output
input_file: src/tests/test_vm/scripts_error/misplaced_return_error.lx
---
ERROR! /Users/jmccollum/rust/lx
return not allowed outside of function at src/tests/test_vm/scripts_error/misplaced_return_error.lx:2:1

