src/tests/test_vm/snapshots/lx__tests__test_vm__scripts_error@undeclared_error.lx.snap
---
source: src/tests/test_vm/mod.rs
expression: output
input_file: src/tests/test_vm/scripts_error/undeclared_error.lx
---
ERROR! src/tests/test_vm/scripts_error/undeclared_error.lx:1:7: use of undeclared variable 'undeclared_var'

