src/tests/test_vm/snapshots/lx__tests__test_vm__scripts_error@unresolved_import_error.lx.snap
---
source: src/tests/test_vm/mod.rs
expression: output
input_file: src/tests/test_vm/scripts_error/unresolved_import_error.lx
---
ERROR! unresolved import: src/tests/test_vm/scripts_error/file/that/does/not/exist.lx

