src/tests/test_vm/snapshots/lx__tests__test_vm__scripts_error@unterminated_comment_error.lx.snap
---
source: src/tests/test_vm/mod.rs
expression: output
input_file: src/tests/test_vm/scripts_error/unterminated_comment_error.lx
---
ERROR! src/tests/test_vm/scripts_error/unterminated_comment_error.lx:1:1: unterminated block comment

