src/tests/test_vm/snapshots/lx__tests__test_vm__scripts_error@unterminated_string_literal_error.lx.snap
---
source: src/tests/test_vm/mod.rs
expression: output
input_file: src/tests/test_vm/scripts_error/unterminated_string_literal_error.lx
---
ERROR! /Users/jmccollum/rust/lx
unterminated string literal starting at src/tests/test_vm/scripts_error/unterminated_string_literal_error.lx:1:1

